--- a/server/a-frame/basic/index.html
+++ b/server/a-frame/basic/index.html
@@ -3,6 +3,26 @@
     <script type="text/javascript" src="https://aframe.io/releases/0.4.0/aframe.min.js">
     
     </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+<script>
+if (annyang) {
+  // Let's define our first command. First the text we expect, and then the function it should call
+  //alert("annyang");
+  var commands = {
+    //'hello (there)': function() {
+    'step': function() {	
+      //alert("Hello!");
+      document.querySelector("#cameraWrapper").setAttribute('position', {x: 1, y: 1, z: 1});
+    } 
+  };
+
+  // Add our commands to annyang
+  annyang.addCommands(commands);
+
+  // Start listening. You can call this here, or attach this call to an event, button, etc.
+  annyang.start();
+}
+</script>
   </head>
   <body>
      <a-scene>
@@ -13,7 +33,7 @@
 
        <a-sky color="#ECECEC"></a-sky>
        
-       <a-entity position="0 0 3.8">
+       <a-entity id='cameraWrapper' position="0 0 3.8">
         <a-camera></a-camera>
       </a-entity>
      </a-scene>
